refactor: delete unnecessary libraries and configs